--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
   <link rel="manifest" href="favicon/site.webmanifest">
   <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 </head>
 
 <body>
-  <h1 id="level-title">Press Any Key to Start</h1>
+  <h1 id="level-title">Welcome!</h1>
   <div class="container">
     <div class="row">
 
@@ -38,6 +37,9 @@
     </div>
 
   </div>
+
+  <h1 id="status">Press Any Key to Start</h1>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
   <script src="game.js"></script>
